# thesis-backtester

./: .env.example  .gitignore  CLAUDE.md  README.md  README_en.md  pyproject.toml
docs/: data_dimensions_roadmap.md  framework_evolution.md  investment_thesis_backtester.md  scaling_plan.md
docs/design/: architecture.md  backtest.md  live_analysis.md  operators.md  production_roadmap.md  scoring.md  screener.md
docs/site/: index.html
docs/site/css/: style.css
docs/site/js/: app.js
operators/: README.md
operators/v2/: README.md
operators/v2/bank/: asset_quality.md  bank_nim.md  bank_stress_test.md  pb_roe_valuation.md
operators/v2/consumer/: brand_moat.md  consumer_growth.md
operators/v2/decision/: apple_trading_model.md
operators/v2/forward_risk/: market_sentiment.md
operators/v2/fundamental/: cash_trend_5y.md  debt_structure.md  management_integrity.md  stream_classification.md
operators/v2/manufacturing/: capacity_cycle.md  roic_analysis.md  supply_chain_position.md
operators/v2/screening/: data_source_grading.md  geopolitical_exclusion.md  quick_screen_5min.md  soe_identification.md
operators/v2/tech/: tech_growth.md  tech_valuation.md
operators/v2/valuation/: owner_earnings.md
scripts/: run_blind_batch.py  run_blind_batch.sh
src/: batch_live.py
src/agent/: client.py  runtime.py
src/analyzer/: analysis_runner.py  framework_parser.py  output_schema.py  prompt_builder.py
src/backtest/: __init__.py  crosssection.py  outcome_collector.py  pipeline.py  quality_scorer.py
src/data/: __main__.py  api.py  live_snapshot.py  settings.py  snapshot.py  storage.py  tushare_client.py  updater.py
src/data/crawler/: provider.py
src/desktop/: main.py  requirements.txt
src/desktop/api/: main.py
src/desktop/api/routers/: chat.py  (+7 more)
src/desktop/frontend/: index.html
src/engine/: __init__.py  config.py  launcher.py  operators.py
src/screener/: __init__.py  batch_backtest.py  blind_batch.py  quick_filter.py
src/web/: app.py
strategies/bank_analysis/: strategy.yaml
strategies/income_focus/: strategy.yaml
strategies/my_test1/: strategy.yaml
strategies/v556_value/: README.md  output_schema.py  strategy.yaml  template.md
strategies/v6_enhanced/: strategy.yaml
strategies/v6_value/: strategy.yaml
(+310 files in other folders)
