[project]
name = "thesis-backtester"
version = "0.2.0"
description = "AI-powered investment analysis framework with structured operator composition and multi-baseline backtesting"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["investment", "backtest", "llm", "ai", "analysis", "operator", "dag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    # 核心
    "pandas>=1.5",
    "pyarrow>=10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    # LLM
    "openai>=1.0",
    # 数据源
    "tushare>=1.2",
    "akshare>=1.14",
    # Web
    "streamlit>=1.30",
    # 可视化
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/turtlequant/thesis-backtester"

[project.scripts]
thesis-backtester = "src.engine.launcher:main"

[tool.ruff]
line-length = 100

[tool.uv]
dev-dependencies = [
    "ruff>=0.1",
    "pytest>=7.0",
]
